--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -49,7 +49,8 @@ blog about lucene.net
 Version 2.9.98   11/XX/2008 
 -----------------------------------------------------------------------
 
-* IMPORTANT FOR OUTSIDE THE US: 
+* IMPORTANT: Check you Web.config settings related to date formats
+if you have a problem with this release.  Keep reading:
 
 * Now using the jQuery javascript library.  Changed the calendar popup 
 to the jQuery datepicker. It uses  Web.config "DatepickerDateFormat" to
@@ -74,6 +75,11 @@ mode.  Google the error message for more info.
 
 * Fixed bug 1239351 "SQL saved from search can have incorrect date
 format"
+
+* Fixed bug 2189739 "'Seen' field appears in print and export to excel
+results:
+
+* Fixed bug 2207549 "HTML tags bug in edit_customfield.aspx"
 
 * If "DisplayAnotherButtonInEditBugPage" is set to 1, the error message
 is also duplicated at the top of the form along with the button.
