--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -46,7 +46,7 @@ blog about lucene.net
 
 
 -----------------------------------------------------------------------
-Version 2.9.98   11/XX/2008 
+Version 2.9.9   10/31/2008 
 -----------------------------------------------------------------------
 
 * IMPORTANT: Check you Web.config settings related to date formats
@@ -81,10 +81,17 @@ results:
 
 * Fixed bug 2207549 "HTML tags bug in edit_customfield.aspx"
 
+* Fixed bug with custom dropdowns based on char datatypes not working 
+because of the values from the db being padded with spaces. 
+
 * If "DisplayAnotherButtonInEditBugPage" is set to 1, the error message
 is also duplicated at the top of the form along with the button.
 
 * Fixed cosmetic bug, missing form border in IE.
+
+* Fixed problem with ids in search.aspx where custom field has spaces
+in its name.  That made them impossible to select using a custom 
+css file.
 
 * Completed the logic that warns you if you are are leaving the edit bug
 page with unsaved changes.  Now it's working with the menu and comment
