git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@252 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -53,6 +53,9 @@ conflict UNION
 
 * Fixed bug with logic (regular expression) that turns URLs into links.
 
+* Added ability to toggle column filters from "something" to
+"NOT something".  When you have a filter set to some value, hold down
+the Ctrl key and click in it.
 
 -----------------------------------------------------------------------
 Version 2.9.9   11/01/2008 
