git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@259 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -48,6 +48,8 @@ Version 3.0.2   11/14/2008
 
 filters for project specific custom fields?
 
+field level permissions in emails and history too
+
 -----------------------------------------------------------------------
 Version 3.0.1   11/14/2008 
 -----------------------------------------------------------------------
