--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -46,14 +46,23 @@ sending email as guest
 project custom dropdown?
 
 -----------------------------------------------------------------------
+Version 3.0.4   11/xx/2008 
+-----------------------------------------------------------------------
+
+* Added ability for admin to try to resend unsent emails.  The system
+tries to resend automatically anyway whenever there is a new 
+notification, but the new feature lets an admin do it explicitly.
+
+* Fixed bug in relationships page when trying to add a relationship
+after deleting one.
+
+-----------------------------------------------------------------------
 Version 3.0.3   11/24/2008 
 -----------------------------------------------------------------------
 
 Everybody who downloaded 3.0.2 should replace it with this release.
 
-* Fixed bug in bug.cs, line 1168, when sending a notification email.
-
-
+Fixed bug in bug.cs, line 1168, when sending a notification email.
 
 -----------------------------------------------------------------------
 Version 3.0.2   11/21/2008 
