git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@268 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -49,6 +49,10 @@ project custom dropdown?
 Version 3.0.4   11/xx/2008 
 -----------------------------------------------------------------------
 
+see what the guy did with the orgs query
+
+
+
 * Added ability for admin to try to resend unsent emails.  The system
 tries to resend automatically anyway whenever there is a new 
 notification, but the new feature lets an admin do it explicitly.
