git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@276 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -58,6 +58,7 @@ edit_comment.aspx(31): security.check_security(dbutil, HttpContext.Current, Secu
 
 send email?
 
+EnableRelationships
 
 -----------------------------------------------------------------------
 Version 3.0.4   11/28/2008 
