--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -45,9 +45,6 @@ project custom dropdown?
 Version 3.0.5   11/xx/2008 
 -----------------------------------------------------------------------
 
-TEST WITH WINDOWS SECURITY
-
-
 To migrate to this release, run the QL in upgrade.sql.
 
 alter table orgs add og_can_view_tasks int not null default(0)
@@ -73,18 +70,49 @@ if Windows authentication was being used.
 * Fixed bug where guest was seeing "add task" link, but wasn't allowed
 to add task.
 
-upgrade.sql
+* Added to setup.sql a couple sample reports related to the new
+tasks/time feature.
 
+Here's a report of hours spent by org/year/month, that you could
+use for tracking billable hours, based on "actual duration".
 
 select 
-org_name [customer],
-datepart('year',tsk_creation
-sum(
+og_name [organization],
+datepart(year,tsk_created_date) [year], 
+datepart(month,tsk_created_date) [month],
+convert(decimal(8,1),sum(
 case 
-when tsk_durations_units = 'minutes' then actual_duration / 60.0
-when tsk_durations_units = 'days' then actual_duration * 8 
-else actual_duration [hours]),
+when tsk_duration_units = 'minutes' then tsk_actual_duration / 60.0
+when tsk_duration_units = 'days' then tsk_actual_duration * 8.0 
+else tsk_actual_duration * 1.0 
+end)) [total hours]
 from bug_tasks
+inner join bugs on tsk_bug = bg_id
+inner join orgs on bg_org = og_id
+where isnull(tsk_actual_duration,0) <> 0
+group by 
+og_name,
+datepart(year,tsk_created_date), 
+datepart(month,tsk_created_date)
+
+Here's a report of hours still left to do based on "planned duration"
+and "percent complete".
+
+select 
+pj_name [project],
+convert(decimal(8,1),sum(
+case 
+when tsk_duration_units = 'minutes' then 
+tsk_planned_duration / 60.0 * .01 * (100 - isnull(tsk_percent_complete,0))
+when tsk_duration_units = 'days' then 
+tsk_planned_duration * 8.0  * .01 * (100 - isnull(tsk_percent_complete,0))
+else tsk_planned_duration * .01 * (100 - isnull(tsk_percent_complete,0))
+end)) [total hours]
+from bug_tasks
+inner join bugs on tsk_bug = bg_id
+inner join projects on bg_project = pj_id
+where isnull(tsk_planned_duration,0) <> 0
+group by pj_name
 
 -----------------------------------------------------------------------
 Version 3.0.4   11/28/2008 
