git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@288 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -63,6 +63,10 @@ I didn't.
 org table, so that if you added, deleted, then re-added a custom col,
 you would get an error.
 
+* Fixed "Exception: System.InvalidOperationException: The connection was not 
+closed. The connection's current state is open." error when attaching
+a file to an email.
+
 -----------------------------------------------------------------------
 Version 3.0.5   12/13/2008 
 -----------------------------------------------------------------------
